--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,10 @@ asgiref==3.3.1
 Django==3.1.3
 django-allauth==0.43.0
 django-rated-reviews==0.6.0
+gunicorn==20.0.4
 oauthlib==3.1.0
 Pillow==8.0.1
+psycopg2-binary==2.8.6
 PyJWT==1.7.1
 python3-openid==3.2.0
 pytz==2020.4
